squashing bugs

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,9 +1,9 @@
 // Colors
 $background: #181921;
-$accent: #D17E12;
+$accent: #fc5185;
+$alt-accent: #759BB7;
 $alert: #d1473d;
-$notice: #4F8474;
-$alt-accent: #fc5185;
+$notice: #56A78F;
 $menu: #1e1f28;
 $menu-item: #2D2F39;
 $text: #eee;
